--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,7 @@ Grey dark 2: #777
 Grey dark 3: #999
 
 */
+
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
@@ -23,53 +24,41 @@ Grey dark 3: #999
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
   --color-grey-light-4: #ccc;
+
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rbga(0, 0, 0, 0.3); }
+
+  --shadow-dark: 0 2rem 6rem rbga(0, 0, 0, 0.3);
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-primary-dark));
+  background-image: linear-gradient(
+    to right bottom,
+    var(--color-primary),
+    var(--color-primary-dark)
+  );
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
-
-.container {
-  max-width: 120rem;
-  margin: 8rem auto;
-  background-color: var(--color-grey-light-2);
-  box-shadow: var(--shadow-dark);
-  min-height: 50rem; }
-
-.header {
-  height: 7rem;
-  background-color: #fff;
-  border-bottom: var(--color-grey-light-1); }
-
-.content {
-  display: flex; }
-
-.sidebar {
-  background-color: var(--color-grey-dark-2);
-  flex: 0 0 18%; }
-
-.hotel-view {
-  background-color: orangered;
-  flex: 1; }
+  min-height: 100vh;
+}
